syntax = "proto3";

package businessservice;

import "business.proto";

option go_package = "./pb";

service Business {
    rpc GetBusiness(GetBusinessRequest) returns (GetBusinessResponse);
    rpc CreateBusiness(CreateBusinessRequest) returns (CreateBusinessResponse);
    rpc QueryBusiness(QueryBusinessRequest) returns (QueryBusinessResponse);
}

message GetBusinessRequest {
    int64 businessId = 1;
}

message GetBusinessResponse {
    business.BusinessData business = 1;
}

message CreateBusinessRequest {
    business.BusinessData business = 1;
}

message CreateBusinessResponse {
    business.BusinessData business = 1;
}

message QueryBusinessRequest {
    int32 page = 1;
    int32 pageSize = 2;
}

message QueryBusinessResponse {
    repeated business.BusinessData business = 1;
}